--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "embla-carousel-react": "8.5.1",
     "html2canvas": "latest",
     "input-otp": "1.4.1",
-    "jspdf": "latest",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.454.0",
     "next": "^14.2.30",
     "next-themes": "^0.4.4",
